# allure2md

./: README.md  allure_markdown_report.md  debug.py  pyproject.toml  requirements.txt  run.py
allure_markdown/: __init__.py  _setting.py  cli.py  config.py  main.py  pytest_plugin.py
allure_markdown/templates/: report.md.j2
allure_markdown/utils/: parser.py  report_generator.py
metadata/: 0133df73-3275-4d3c-a376-f6a9a55f8849-result.json  20739c3c-be50-44ee-a23c-bdec7c404691-result.json  2cf3975e-2263-4da9-9c17-937c3d8b39ac-result.json  43265540-b2e8-4ceb-b337-0c7de31b867d-result.json  526c7a1d-6682-43c5-a11c-194aedca20f8-result.json  8f781a5f-876b-4ed8-b0ec-c66f55b25585-result.json  bd8d6b35-640b-4086-8a81-34ad0c2ef746-result.json  c2a986ed-c8b7-4548-b87a-86a9db2b87b8-result.json  cd0fd0d9-12a3-414b-a0bf-534053e44298-result.json  environment.properties  f7f22b87-483b-452a-b25c-4696cd04e4e6-result.json
tests/: test_comprehensive.py
